--- a/style.css
+++ b/style.css
@@ -2,15 +2,15 @@
     margin: 0;
     padding: 0;
 }
-/*section {
-    width: 100%;
-    height: 100vh;
-    background-image: url(study-1.jpg);
-    background-size:cover;                    
-    background-repeat: no-repeat;
-    background-position:center center;
-    font-family: sans-serif; 
-}*/
+
+h1{
+    margin: 10px 0 0 100px;
+    padding: 0 0 0px;
+    text-align: left;
+    font-size: 70px;
+    font-family: 'Amatic SC', cursive;
+    color: #ff6a00;
+}
 
 .loginbox{
     position:absolute;
@@ -49,14 +49,6 @@
     left: calc(50% - 50px);
 }
 
-h1{
-    margin: 10px 0 0 100px;
-    padding: 0 0 0px;
-    text-align: left;
-    font-size: 70px;
-    font-family: 'Amatic+SC', cursive;
-    color: #ff6a00;
-}
 h2{
     margin:0;
     padding: 0 0 5px;
@@ -64,12 +56,6 @@ h2{
     font-size: 22px;
     color: #fff;
 }
-/*h3{
-    margin:0;
-    text-align: center;
-    font-size: 22px;
-    color: #ff6a00;
-}*/
 
 .formbox p{
     margin:0;
@@ -256,6 +242,10 @@ a{
     text-decoration: none;
 }
 
+i{
+    cursor:pointer;
+}
+
 .titlebg{
   background-color: #8FC124;
   height: 75px
@@ -391,7 +381,7 @@ a{
     position: relative;
 }
 
-.resultbox h3{
+.resultbox h4{
     position: relative;
     color: #ff6a00;
 }
@@ -427,6 +417,11 @@ a{
  
 }
 
+.followButton:hover{
+    cursor: pointer;
+    background-color: #ff0000;
+}
+
 .ProfileBox h3{
     color: #ff6a00;
     margin-left: 12px;
@@ -454,8 +449,24 @@ a{
     text-decoration: none;
 }
 
+.ProfileBox button:hover{
+    outline: 0;
+    background: #ff0000;
+    cursor: pointer;
+}
+
 .skills{
     margin-left: 400px;
+}
+
+.skills a{
+    color: #000000;
+    cursor: pointer;
+    outline: 0;
+}
+
+.skills a:hover{
+    color: #ff0000;
 }
 
 .skills h3{
@@ -474,13 +485,14 @@ a{
     text-align: left;
     padding: 10px;
     height: auto;
+    width: 220px;
 }
 
 .skills tr:nth-child(even) {
     background-color: #8FC124;
 }
 
-.skills button{
+.editSkillsButton{
     color: white;
     background-color: #ff6a00;
     border: none;
@@ -496,9 +508,7 @@ a{
 {
     cursor: pointer;
     background: #ff0000;
-    color: white;
 }
-
 
 .ProfileBox input {
     position: relative;
@@ -659,4 +669,9 @@ h6{
     padding: 10px 10px;
     text-align: center;
     text-decoration: none;
+}
+
+.typeMessage button:hover{
+    background-color: #ff0000;
+    cursor: pointer;
 }
